<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.eagledev.planner.Activity.BuyPremiumActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">



    <include layout="@layout/toolbar_confirm">

    </include>


    <TextView
        android:id="@+id/text_premium_features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/premium_features"
        style="@style/Planner.BoldText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_premium_plan"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        style="@style/Planner.BoldText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/month_plan"
        style="@style/Planner.RegularText"/>


    <net.eagledev.planner.PlannerButton
        android:id="@+id/btn_premium_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:text="@string/month_prince"
        app:size="2"
        app:scale="4"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/yearly_plan"
        style="@style/Planner.RegularText"/>

    <net.eagledev.planner.PlannerButton
        android:id="@+id/btn_premium_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:text="@string/year_pince"
        app:size="2"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/watch_ads_ore_premium"
        android:textColor="@color/black"
        style="@style/Planner.BoldText"/>

    <net.eagledev.planner.PlannerButton
        android:id="@+id/btn_premium_watch_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:text="@string/watch_ad"
        app:size="2"/>

    <TextView
        android:id="@+id/text_premium_points"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/premium_points_amount"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        style="@style/Planner.BoldText"
        />

    <net.eagledev.planner.PlannerButton
        android:id="@+id/premium_invite_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:text="Zaproś"
        app:size="1"/>




</LinearLayout>
