<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="370dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_box_3">

<LinearLayout
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/dialog_task_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sfsdfs"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/dialog_task_info_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Today"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/dialog_task_info_repeating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/everyday"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/dialog_task_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="main"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/dialog_task_info_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ggdffd"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/dialog_task_info_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nie"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        />

    <net.eagledev.planner.PlannerButton
        android:id="@+id/dialog_task_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        app:text="@string/edit"
        app:size="1"/>

</LinearLayout>
</LinearLayout>