<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background"
    tools:context=".Activity.AddRoutine"
    android:theme="@style/AppTheme">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_confirm"></include>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical"
            tools:paddingTop="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            style="@style/AppTheme">

            <EditText
                android:id="@+id/input_routine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />

            <Button
                android:id="@+id/input_routine_start"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/start_hour"
                style="@style/AppTheme.Button"/>

            <Button
                android:id="@+id/input_routine_stop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/stop_hour"
                style="@style/AppTheme.Button"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_view"
                    android:layout_width="50dp"
                    android:layout_height="@dimen/button_height"
                    style="@style/AppTheme.Button"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/city18"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:padding="3dp"
                    />

                <Button
                    android:id="@+id/btn_select_icon"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/select_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/color_view"
                    android:layout_width="50dp"
                    android:layout_height="@dimen/button_height"
                    style="@style/AppTheme.Button"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:padding="3dp"
                    android:background="@color/pie0"
                    />

                <Button
                    android:id="@+id/btn_select_color"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    style="@style/AppTheme.Button"
                    android:text="@string/select_color"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/check_monday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/monday" />

                    <CheckBox
                        android:id="@+id/check_tuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tuesday" />

                    <CheckBox
                        android:id="@+id/check_wednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wednesday" />

                    <CheckBox
                        android:id="@+id/check_thursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/thursday" />

                    <CheckBox
                        android:id="@+id/check_friday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/friday" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/check_saturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/saturday" />

                    <CheckBox
                        android:id="@+id/check_sunday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sunday" />

                    <CheckBox
                        android:id="@+id/check_work_days"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/work_days" />

                    <CheckBox
                        android:id="@+id/check_weekends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/weekends" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal"
            tools:layout_marginBottom="15dp">



        </LinearLayout>

    </LinearLayout>




</RelativeLayout>