<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.eagledev.planner.Fragment.AccountFragment">


    <LinearLayout
        android:id="@+id/user_layout_logout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_must_sign_in_to_see_your_account"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/user_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_logout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_address"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/user_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="degeapps@gmail.com"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="25dp"/>
        <Button
            android:id="@+id/user_btn_nuke_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/delete_all_data"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/user_btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/logout"/>
    </LinearLayout>

</FrameLayout>
