<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        >
    </LinearLayout>

        <TextView
            android:id="@+id/need_premium_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/only_premium_users_can_use_this_function"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/to_use_this_function_buy_premium_or_watch_ad"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/need_premium_button"
            style="@style/AppTheme.Button"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/check_premium_plans"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/need_premium_ad_button"
            style="@style/AppTheme.Button"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/watch_ad"
            android:textSize="15sp"/>



</LinearLayout>